[gd_scene load_steps=11 format=2]

[ext_resource path="res://Fonts/consolas/CONSOLA.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://MiscRelated/GUI_Category_Related/AdvancedButton/AdvancedButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://MapsRelated/MapList/Map_Mesa/BehaviorSpecific/GUI/ChoicePanel/Mesa_ChoicePanel.gd" type="Script" id=3]
[ext_resource path="res://MapsRelated/MapList/Map_Mesa/BehaviorSpecific/GUI_Assets/ChoiceFrame_Pic.png" type="Texture" id=4]
[ext_resource path="res://MapsRelated/MapList/Map_Mesa/BehaviorSpecific/GUI_Assets/RedLine_7x7.png" type="Texture" id=5]
[ext_resource path="res://MapsRelated/MapList/Map_Mesa/BehaviorSpecific/GUI_Assets/Choice_Duned_Icon.png" type="Texture" id=6]
[ext_resource path="res://GameHUDRelated/Tooltips/TooltipBodyConstructors/TooltipBody.tscn" type="PackedScene" id=7]
[ext_resource path="res://MapsRelated/MapList/Map_Mesa/BehaviorSpecific/GUI_Assets/DarkGrayLine_4x4.png" type="Texture" id=8]
[ext_resource path="res://MapsRelated/MapList/Map_Mesa/BehaviorSpecific/GUI_Assets/BrownBackground_4x4.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]
outline_color = Color( 0.866667, 0.866667, 0.866667, 1 )
font_data = ExtResource( 1 )

[node name="Mesa_ChoicePanel" type="MarginContainer"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 220, 260 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 3 )

[node name="Left" type="TextureRect" parent="."]
margin_right = 7.0
margin_bottom = 260.0
mouse_filter = 2
size_flags_horizontal = 2
texture = ExtResource( 5 )
stretch_mode = 2

[node name="Right" type="TextureRect" parent="."]
margin_left = 213.0
margin_right = 220.0
margin_bottom = 260.0
mouse_filter = 2
size_flags_horizontal = 10
texture = ExtResource( 5 )
stretch_mode = 2

[node name="Up" type="TextureRect" parent="."]
margin_right = 220.0
margin_bottom = 7.0
mouse_filter = 2
size_flags_vertical = 2
texture = ExtResource( 5 )
stretch_mode = 2

[node name="Down" type="TextureRect" parent="."]
margin_top = 253.0
margin_right = 220.0
margin_bottom = 260.0
mouse_filter = 2
size_flags_vertical = 10
texture = ExtResource( 5 )
stretch_mode = 2

[node name="ContentMarginer" type="MarginContainer" parent="."]
margin_right = 220.0
margin_bottom = 260.0
mouse_filter = 2
custom_constants/margin_right = 9
custom_constants/margin_top = 9
custom_constants/margin_left = 9
custom_constants/margin_bottom = 9

[node name="VBoxContainer" type="VBoxContainer" parent="ContentMarginer"]
margin_left = 9.0
margin_top = 9.0
margin_right = 211.0
margin_bottom = 251.0
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="ContentMarginer/VBoxContainer"]
margin_right = 202.0
margin_bottom = 41.0
mouse_filter = 2

[node name="ChoiceIcon" type="TextureRect" parent="ContentMarginer/VBoxContainer/MarginContainer"]
margin_left = 83.0
margin_top = 3.0
margin_right = 118.0
margin_bottom = 38.0
mouse_filter = 2
size_flags_horizontal = 6
size_flags_vertical = 6
texture = ExtResource( 6 )

[node name="Frame" type="TextureRect" parent="ContentMarginer/VBoxContainer/MarginContainer"]
margin_left = 80.0
margin_right = 121.0
margin_bottom = 41.0
mouse_filter = 2
size_flags_horizontal = 6
size_flags_vertical = 6
texture = ExtResource( 4 )

[node name="Content02" type="MarginContainer" parent="ContentMarginer/VBoxContainer"]
margin_top = 45.0
margin_right = 202.0
margin_bottom = 242.0
mouse_filter = 2
size_flags_vertical = 3

[node name="Background" type="TextureRect" parent="ContentMarginer/VBoxContainer/Content02"]
margin_right = 202.0
margin_bottom = 197.0
mouse_filter = 2
texture = ExtResource( 9 )
stretch_mode = 2

[node name="Left" type="TextureRect" parent="ContentMarginer/VBoxContainer/Content02"]
margin_right = 4.0
margin_bottom = 197.0
mouse_filter = 2
size_flags_horizontal = 2
texture = ExtResource( 8 )
stretch_mode = 2

[node name="Right" type="TextureRect" parent="ContentMarginer/VBoxContainer/Content02"]
margin_left = 198.0
margin_right = 202.0
margin_bottom = 197.0
mouse_filter = 2
size_flags_horizontal = 10
texture = ExtResource( 8 )
stretch_mode = 2

[node name="Up" type="TextureRect" parent="ContentMarginer/VBoxContainer/Content02"]
margin_right = 202.0
margin_bottom = 4.0
mouse_filter = 2
size_flags_vertical = 2
texture = ExtResource( 8 )
stretch_mode = 2

[node name="Down" type="TextureRect" parent="ContentMarginer/VBoxContainer/Content02"]
margin_top = 193.0
margin_right = 202.0
margin_bottom = 197.0
mouse_filter = 2
size_flags_vertical = 10
texture = ExtResource( 8 )
stretch_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="ContentMarginer/VBoxContainer/Content02"]
margin_right = 202.0
margin_bottom = 197.0
mouse_filter = 2
custom_constants/margin_right = 7
custom_constants/margin_top = 7
custom_constants/margin_left = 7
custom_constants/margin_bottom = 7

[node name="VBoxContainer" type="VBoxContainer" parent="ContentMarginer/VBoxContainer/Content02/MarginContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 195.0
margin_bottom = 190.0
mouse_filter = 2

[node name="NameLabel" type="Label" parent="ContentMarginer/VBoxContainer/Content02/MarginContainer/VBoxContainer"]
margin_left = 35.0
margin_right = 152.0
margin_bottom = 17.0
size_flags_horizontal = 6
custom_fonts/font = SubResource( 1 )
text = "<Sample Name>"

[node name="TooltipBody" parent="ContentMarginer/VBoxContainer/Content02/MarginContainer/VBoxContainer" instance=ExtResource( 7 )]
margin_top = 21.0
margin_right = 188.0
margin_bottom = 21.0
size_flags_horizontal = 5
default_font_color = Color( 0.866667, 0.866667, 0.866667, 1 )
default_font_size = 14

[node name="Button" parent="." instance=ExtResource( 2 )]
margin_right = 220.0
margin_bottom = 260.0
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="mouse_entered" from="Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_Button_mouse_exited"]
[connection signal="released_mouse_event" from="Button" to="." method="_on_Button_released_mouse_event"]
